[gd_scene load_steps=13 format=3 uid="uid://dyqf74mwpma3r"]

[ext_resource type="Script" uid="uid://c478garu5fuor" path="res://gambling.gd" id="1_jtgiy"]
[ext_resource type="Script" uid="uid://chkphmnf8s5b8" path="res://button.gd" id="2_u2xo6"]
[ext_resource type="Script" uid="uid://d3e5rqyewymbg" path="res://gambleprocess.gd" id="3_pe2fi"]
[ext_resource type="Script" uid="uid://lid3upx7hdjm" path="res://money2.gd" id="4_pe2fi"]
[ext_resource type="Texture2D" uid="uid://cqplht487jcyy" path="res://coin.png" id="5_l2jdo"]
[ext_resource type="Texture2D" uid="uid://u5dy375jh7ku" path="res://New Project.png" id="5_rcj3c"]
[ext_resource type="Texture2D" uid="uid://bu4j5ig0wimmr" path="res://GOLDHGOLDGOLD.png" id="6_6owdv"]
[ext_resource type="Texture2D" uid="uid://fvum8g8pudk6" path="res://Screenshot 2025-10-04 151210.png" id="8_12745"]
[ext_resource type="Texture2D" uid="uid://uw8wd8p13h7r" path="res://Screenshot 2025-10-05 134548.png" id="8_l2jdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12745"]
bg_color = Color(0.482724, 0.643082, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2jdo"]
bg_color = Color(0, 0.292639, 0.548127, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyxlq"]
bg_color = Color(0.13322, 0.423268, 1, 1)

[node name="Gambling" type="Node2D"]
script = ExtResource("1_jtgiy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="+10" type="Button" parent="."]
z_index = 80
offset_left = -376.0
offset_top = 177.0
offset_right = -294.0
offset_bottom = 208.0
theme_override_styles/hover = SubResource("StyleBoxFlat_12745")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l2jdo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xyxlq")
text = "+10"
script = ExtResource("2_u2xo6")
metadata/_edit_use_anchors_ = true

[node name="-10" type="Button" parent="."]
z_index = 80
offset_left = -571.0
offset_top = 177.0
offset_right = -489.0
offset_bottom = 208.0
theme_override_styles/hover = SubResource("StyleBoxFlat_12745")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l2jdo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xyxlq")
text = "-10"
script = ExtResource("2_u2xo6")
metadata/_edit_use_anchors_ = true

[node name="All in" type="Button" parent="."]
z_index = 80
offset_left = -473.0
offset_top = 177.0
offset_right = -391.0
offset_bottom = 208.0
theme_override_styles/hover = SubResource("StyleBoxFlat_12745")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l2jdo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xyxlq")
text = "ALL IN"
script = ExtResource("2_u2xo6")
metadata/_edit_use_anchors_ = true

[node name="Gamblebutton" type="Button" parent="."]
z_index = 20
offset_left = -527.0
offset_top = 82.0
offset_right = -356.0
offset_bottom = 135.0
theme_override_styles/hover = SubResource("StyleBoxFlat_12745")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l2jdo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xyxlq")
text = "Gamble
"
script = ExtResource("3_pe2fi")
metadata/_edit_use_anchors_ = true

[node name="Money" type="Label" parent="."]
z_index = 555
offset_left = -527.0
offset_top = -373.0
offset_right = -447.0
offset_bottom = -180.0
scale = Vector2(0.932821, 1.00178)
theme_override_font_sizes/font_size = 86
text = "0"
script = ExtResource("4_pe2fi")
metadata/_edit_use_anchors_ = true

[node name="Coin" type="Sprite2D" parent="Money"]
z_index = 185
position = Vector2(-95.4094, 63.8861)
scale = Vector2(0.376, 0.31)
texture = ExtResource("5_l2jdo")

[node name="Label" type="Label" parent="."]
z_index = 345
offset_left = -113.0
offset_top = 129.0
offset_right = 113.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 46
text = "amount: 0"
metadata/amount = 0.0
metadata/_edit_use_anchors_ = true

[node name="back" type="Button" parent="."]
z_index = 80
offset_left = -562.0
offset_top = 253.0
offset_right = -304.0
offset_bottom = 306.0
theme_override_styles/hover = SubResource("StyleBoxFlat_12745")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l2jdo")
theme_override_styles/normal = SubResource("StyleBoxFlat_xyxlq")
text = "Back
"
metadata/_edit_use_anchors_ = true

[node name="Goldhgoldgold" type="Sprite2D" parent="."]
z_index = 191
position = Vector2(0, -200)
scale = Vector2(0.510248, 0.370061)
texture = ExtResource("6_6owdv")

[node name="allslots" type="Node" parent="."]

[node name="First" type="Sprite2D" parent="allslots" groups=["firstslot"]]
z_index = 53
position = Vector2(-82, -440)
scale = Vector2(0.0763889, 0.102539)
texture = ExtResource("5_rcj3c")

[node name="second" type="Sprite2D" parent="allslots" groups=["secondslot"]]
z_index = 3
position = Vector2(-5.75, -250)
scale = Vector2(0.0763889, 0.102539)
texture = ExtResource("5_rcj3c")

[node name="third" type="Sprite2D" parent="allslots" groups=["thirdslot"]]
position = Vector2(76, -250)
scale = Vector2(0.0763889, 0.102539)
texture = ExtResource("5_rcj3c")

[node name="First2" type="Sprite2D" parent="allslots" groups=["firstslot"]]
z_index = 3
position = Vector2(-82, -250)
scale = Vector2(0.0763889, 0.102539)
texture = ExtResource("5_rcj3c")

[node name="second2" type="Sprite2D" parent="allslots" groups=["secondslot"]]
z_index = 3
position = Vector2(-5.75, -440)
scale = Vector2(0.0763889, 0.102539)
texture = ExtResource("5_rcj3c")

[node name="third2" type="Sprite2D" parent="allslots" groups=["thirdslot"]]
z_index = 3
position = Vector2(76, -440)
scale = Vector2(0.0763889, 0.102539)
texture = ExtResource("5_rcj3c")

[node name="Screenshot2025-10-04151210" type="Sprite2D" parent="."]
position = Vector2(0, -179)
scale = Vector2(0.978545, 0.549774)
texture = ExtResource("8_12745")

[node name="Screenshot2025-10-05134548" type="Sprite2D" parent="."]
z_index = 235
position = Vector2(557, 236.688)
scale = Vector2(4.12069, 2.51811)
texture = ExtResource("8_l2jdo")

[node name="Screenshot2025-10-05134549" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(678, -211)
scale = Vector2(3.1408, 3.70495)
texture = ExtResource("8_l2jdo")

[node name="Screenshot2025-10-05134550" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(-706, 14)
scale = Vector2(3.31466, 4.29064)
texture = ExtResource("8_l2jdo")

[node name="Screenshot2025-10-05134551" type="Sprite2D" parent="."]
z_index = 235
position = Vector2(-8, -504)
scale = Vector2(0.851293, 1.84806)
texture = ExtResource("8_l2jdo")

[connection signal="pressed" from="+10" to="+10" method="_on_pressed"]
[connection signal="pressed" from="-10" to="+10" method="_on__pressed"]
[connection signal="pressed" from="All in" to="+10" method="_on_all_in_pressed"]
[connection signal="pressed" from="back" to="Gamblebutton" method="_on_back_pressed"]
